@@ -290,42 +290,6 @@ tasks.register("allResourceLeakTests", Test) {
   }
 }
 
-// These are tests that should only be run with JDK 11+.
-tasks.register("jtregJdk11Tests", Exec) {
-  description = "Run the jtreg tests made for JDK 11+."
-  group = "Verification"
-  dependsOn("compileJava")
-  dependsOn("compileTestJava")
-  dependsOn("shadowJar")
-
-  String jtregOutput = "${buildDir}/jtregJdk11"
-  String name = "all"
-  executable = "jtreg"
-  args = [
-    "-dir:${projectDir}/jtregJdk11",
-    "-workDir:${jtregOutput}/${name}/work",
-    "-reportDir:${jtregOutput}/${name}/report",
-    "-verbose:summary",
-    "-javacoptions:-g",
-    "-keywords:!ignore",
-    "-samevm",
-    "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-    "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-    "-javacoptions:-classpath ${sourceSets.testannotations.output.asPath}",
-    // Location of jtreg tests
-    "."
-  ]
-}
-
 // JSpecify tests are excluded by default.  To run them:
 // ./gradlew NullnessJSpecifySamplesTest
 test {
